RESOLVED FIXED37455
REGRESSION: :visited doesn't work when used with multiple classes/ids
https://bugs.webkit.org/show_bug.cgi?id=37455
Summary REGRESSION: :visited doesn't work when used with multiple classes/ids
Dave Hyatt
Reported 2010-04-12 10:57:31 PDT
<rdar://problem/7849485> REGRESSION (r57292): Visited links on reddit.com lose their color after reloading the page 4/10/10 5:21 AM Mark Rowe: * SUMMARY While reading the intarwebs this evening I've noticed that visited links on reddit.com lose their purple coloring after reloading the page. * STEPS TO REPRODUCE 1. Log in to a reddit account. 2. Command-click a link on reddit.com. Observe the link turning purple. 3. Reload the reddit.com page. * RESULTS The link turns blue when the page reloads. * REGRESSION This didn't happen in r57282, but I'm seeing it with r57404. * NOTES r57299 seems like a likely cause for this. It claims to be updating some of our behavior to match Firefox, but this behavior does not reproduce in Firefox. This bug does not appear to reproduce if you're not logged in to a reddit account.
Attachments
Patch (4.32 KB, patch)
2010-04-12 10:59 PDT, Dave Hyatt
sam: review+
Dave Hyatt
Comment 1 2010-04-12 10:59:55 PDT
Sam Weinig
Comment 2 2010-04-12 11:33:57 PDT
Comment on attachment 53177 [details] Patch This may need some skip list love. Please check before landing.
Dave Hyatt
Comment 3 2010-04-12 11:43:13 PDT
Fixed in r57476.
Note You need to log in before you can comment on or make changes to this bug.