https://bugs.webkit.org/show_bug.cgi?id=37455, :visited doesn't work with multiple classes/ids.

Reviewed by Sam Weinig.

WebCore:

Added fast/history/multiple-classes-visited.html.

* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::SelectorChecker::checkSelector):

LayoutTests:

* fast/history/multiple-classes-visited-expected.txt: Added.
* fast/history/multiple-classes-visited.html: Added.



Canonical link: https://commits.webkit.org/48764@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57476 268f45cc-cd09-0410-ab3c-d52691b4dbfc